[gd_scene load_steps=3 format=3 uid="uid://c0o7lbwqyauwq"]

[ext_resource type="Script" path="res://Battle Forecast.gd" id="1_44nss"]

[sub_resource type="LabelSettings" id="LabelSettings_jbe78"]
font_size = 36

[node name="Battle Forecast" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_44nss")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Based on what you know now..."
label_settings = SubResource("LabelSettings_jbe78")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerDivide" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide"]
layout_mode = 2

[node name="Player1" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameP1" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide/Player1"]
layout_mode = 2
text = "Player1"

[node name="UnitsP1" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide/Player1"]
layout_mode = 2
text = "0"

[node name="Player2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameP2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide/Player2"]
layout_mode = 2
text = "Player2"
horizontal_alignment = 2

[node name="UnitsP2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide/Player2"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/PlayerDivide"]
layout_mode = 2

[node name="Bonuses" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Power" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power"]
layout_mode = 2

[node name="Player1" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player1/VBoxContainer"]
layout_mode = 2

[node name="=" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player1/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "= "

[node name="UnitsP1" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player1/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Player2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player2/VBoxContainer"]
layout_mode = 2

[node name="=" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "= "

[node name="UnitsP2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power/Player2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Power"]
layout_mode = 2

[node name="Final Result" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
